# Wolfenstein3D_Clone

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: test.yml
Header/: basicShader.h  bitmap.h  camera.h  custom_time.h  door.h  game.h  input.h  level.h  lighting.h  main.h  material.h  matrix4f.h  medkit.h  mesh.h  monster.h  phongShader.h  player.h  quaternion.h  renderUtil.h  sdl_requests.h  shader.h  stb_image.h  textRender.h  textShader.h  texture.h  transform.h  util.h  vector2f.h  vector3f.h  vertex.h  window.h
Sources/: basicShader.cpp  bitmap.cpp  camera.cpp  custom_time.cpp  door.cpp  game.cpp  input.cpp  level.cpp  matrix4f.cpp  medkit.cpp  mesh.cpp  monster.cpp  phongShader.cpp  player.cpp  quaternion.cpp  renderUtil.cpp  sdl_requests.cpp  shader.cpp  stb_image.cpp  textRender.cpp  textShader.cpp  texture.cpp  transform.cpp  vector2f.cpp  vector3f.cpp  window.cpp
res/shader/: basicFragment.fs  basicVertex.vs  phongFragment.fs  phongVertex.vs  textFragment.fs  textVertex.vs
